--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -69,6 +69,9 @@ fieldset > legend {
 
 .App {
   text-align: center;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
   /*background-color: var(--bg-color);*/
 }
 
