Add background color to SimulationsMenu component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -91,6 +91,10 @@ fieldset > legend {
   font-weight: bold;
 }
 
+.SimulationsMenu {
+  background-color: #ffffff66;
+}
+
 .SimulationsMenu-inner-fieldset {
   display: flex;
   justify-content: space-between;
