--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -100,6 +100,11 @@ fieldset > legend {
   justify-content: space-between;
 }
 
+.SimulationsMenu-player-settings {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .SimulationsMenu-button {
   align-self: center;
   height: fit-content;
