--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,7 +34,7 @@
 }
 
 body {
-  background-image: url("../assets/background_graphic_256x256_cropped_filterB&W.jpeg");
+  background-image: url("assets/background_graphic_256x256_cropped_filterB&W.jpeg");
   background-repeat: repeat;
   /*todo: maybe use opacity instead of blend-mode*/
   background-blend-mode: screen;
@@ -89,6 +89,24 @@ fieldset > legend {
   justify-content: center;
   font-size: calc(15px + 2vmin);
   font-weight: bold;
+}
+
+.App-sim-history {
+  min-width: 200px;
+  margin: 10px;
+  overflow-y: scroll;
+  background: #66ccff55;
+}
+
+.App-sim-hist > button{
+  padding: 0;
+  margin: 0;
+}
+
+.App-sim-hist > button > img {
+  height: 20px;
+  width: 20px;
+  vertical-align: middle;
 }
 
 .SimulationsMenu {
@@ -146,10 +164,4 @@ fieldset > legend {
   border-top-color: var(--border-top-color);
   border-right-color: var(--border-right-color);
   border-bottom-color: var(--border-bottom-color);
-}
-
-.sim-history {
-  width: 100px;
-  height: 500px;
-  background: #66ccff;
 }
