--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -63,8 +63,16 @@ fieldset > legend {
   background-color: var(--color-1);
 }
 
+.miss-tile {
+  background-color: var(--color-4);
+}
+
 .unknown-tile {
   background-color: var(--color-0);
+}
+
+.hit-tile {
+  background-color: var(--color-7);
 }
 
 .App {
